--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
 attrs==17.3.0
+backports.shutil-get-terminal-size==1.0.0
 colorama==0.3.9
+decorator==4.1.2
+enum34==1.1.6
 funcsigs==1.0.2
+ipython==5.5.0
+ipython-genutils==0.2.0
+pathlib2==2.3.0
+pickleshare==0.7.4
 pluggy==0.6.0
+prompt-toolkit==1.0.15
 py==1.5.2
+Pygments==2.2.0
 pytest==3.3.0
+scandir==1.6
 selenium==3.8.0
+simplegeneric==0.8.1
 six==1.11.0
+traitlets==4.3.2
+wcwidth==0.1.7
+win-unicode-console==0.5
