--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,36 @@ six==1.11.0
 traitlets==4.3.2
 wcwidth==0.1.7
 win-unicode-console==0.5
+asn1crypto==0.23.0
+attrs==17.3.0
+backports.shutil-get-terminal-size==1.0.0
+bcrypt==3.1.4
+cffi==1.11.2
+colorama==0.3.9
+cryptography==2.1.4
+decorator==4.1.2
+enum34==1.1.6
+funcsigs==1.0.2
+idna==2.6
+ipaddress==1.0.18
+ipython==5.5.0
+ipython-genutils==0.2.0
+paramiko==2.4.0
+pathlib2==2.3.0
+pickleshare==0.7.4
+pluggy==0.6.0
+prompt-toolkit==1.0.15
+py==1.5.2
+pyasn1==0.4.2
+pycparser==2.18
+Pygments==2.2.0
+PyNaCl==1.2.1
+pytest==3.3.0
+scandir==1.6
+selenium==3.8.0
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
+wcwidth==0.1.7
+win-unicode-console==0.5
+
