--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,10 @@
-attrs==17.3.0
-backports.shutil-get-terminal-size==1.0.0
-colorama==0.3.9
-decorator==4.1.2
-enum34==1.1.6
-funcsigs==1.0.2
-ipython==5.5.0
-ipython-genutils==0.2.0
-pathlib2==2.3.0
-pickleshare==0.7.4
-pluggy==0.6.0
-prompt-toolkit==1.0.15
-py==1.5.2
-Pygments==2.2.0
-pytest==3.3.0
-scandir==1.6
-selenium==3.8.0
-simplegeneric==0.8.1
-six==1.11.0
-traitlets==4.3.2
-wcwidth==0.1.7
-win-unicode-console==0.5
 asn1crypto==0.23.0
 attrs==17.3.0
 backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.4
+certifi==2017.11.5
 cffi==1.11.2
+chardet==3.0.4
 colorama==0.3.9
 cryptography==2.1.4
 decorator==4.1.2
@@ -45,11 +25,13 @@ pycparser==2.18
 Pygments==2.2.0
 PyNaCl==1.2.1
 pytest==3.3.0
+requests==2.18.4
 scandir==1.6
 selenium==3.8.0
 simplegeneric==0.8.1
 six==1.11.0
 traitlets==4.3.2
+urllib3==1.22
 wcwidth==0.1.7
 win-unicode-console==0.5
 
